--- a/.github/catalog.yml
+++ b/.github/catalog.yml
@@ -4,6 +4,12 @@
 news-website:
   name: news-website
   description: 根目录，按照内容与来源分类
+news-website/hooks:
+  name: hooks
+  description: 这是一个关于跨性别相关的新闻与分享平台，重点关注最新的生命故事、社会动态以及医疗资源，旨在为跨性别者提供有用的信息和支持。
+news-website/overrides:
+  name: overrides
+  description: 本目录包含与跨性别相关的新闻类型内容，提供各种跨性别个体的故事、过渡经历以及最新的跨性别相关政策信息和社会环境的报道。
 news-website/中国新闻网:
   name: 中国新闻网
   description: 本目录收录了与跨性别相关的一系列新闻报道和个人故事，涉及跨性别者在军事服役、法律政策、以及自身经历和社会接受度等方面的内容。这些资料展现了跨性别者在社会中的挑战与奋斗，也记录了相关政策的变化和影响。
@@ -25,6 +31,9 @@ news-website/网易新闻:
 news-website/腾讯新闻:
   name: 腾讯新闻
   description: 本目录收录了与跨性别相关的新闻报道，涵盖了跨性别人士的生活故事、社会支持、医疗资源、法律政策以及文化表达等多方面内容，为用户提供了多维度的信息视角，帮助了解跨性别群体在社会中的现状与挑战。
+webpage_archive/cleaned:
+  name: cleaned
+  description: 该目录收录了来自多个网站的中文跨性别相关的新闻报道和信息，包括新浪、搜狐、腾讯新闻等。这些资源涵盖了跨性别者的生命故事、医疗经验、法律政策、社会环境、以及相关统计数据和研究资料，旨在展示跨性别群体的真实生存状况和艺术创作。
 学术文献:
   name: 学术文献
   description: 此目录包含关于跨性别议题的学术文献，包括人文、医学、法律和社会科学领域的研究和资料，包括但不限于发表于学术期刊的论文和由大学附属出版社出版的学术书籍。采用近似于学术写作的风格创作、发布于某些期刊杂志，但不确定是否为「学术」文献的，放置于「杂志及新闻报道」分类。
