--- a/.github/templates/additional.md.template
+++ b/.github/templates/additional.md.template
@@ -6,21 +6,21 @@
 {description}
 <!-- tcd_abstract_end -->
 
-> 附加信息 [Processed Page Metadata]
->
-> | Attribute       | Value                                  |
-> |-----------------|----------------------------------------|
-> | Filename        | {filename}                             |
-> | Type            | {type}                                 |
-> | Format          | {format}                               |
-> | Size            | {size} bytes                           |
-> | MD5             | {md5}                                  |
-> | Archived Date   | {archived}                             |
-> | Original Link   | [{link}]({link})                         |
-> | Author          | {author}                              |
-> | Region          | {region}                              |
-> | Date            | {date}                                 |
-> | Tags            | {tags}                                 |
+附加信息 [Processed Page Metadata]
+
+| Attribute       | Value                                  |
+|-----------------|----------------------------------------|
+| Filename        | {filename}                             |
+| Type            | {type}                                 |
+| Format          | {format}                               |
+| Size            | {size} bytes                           |
+| MD5             | {md5}                                  |
+| Archived Date   | {archived}                             |
+| Original Link   | [{link}]({link})                         |
+| Author          | {author}                              |
+| Region          | {region}                              |
+| Date            | {date}                                 |
+| Tags            | {tags}                                 |
 >
 > 本文由跨性别中文数字档案馆归档整理，仅供浏览。版权归原作者所有。
 >
