--- a/.github/catalog.yml
+++ b/.github/catalog.yml
@@ -25,6 +25,18 @@ news-website/网易新闻:
 news-website/腾讯新闻:
   name: 腾讯新闻
   description: 本目录收录了与跨性别相关的新闻报道，涵盖了跨性别人士的生活故事、社会支持、医疗资源、法律政策以及文化表达等多方面内容，为用户提供了多维度的信息视角，帮助了解跨性别群体在社会中的现状与挑战。
+old_workspace:
+  name: old_workspace
+  description: 本目录收录与跨性别主题相关的漫画作品，涵盖多样化的故事情节和艺术风格，旨在通过视觉艺术表达跨性别者的生活、感受与经历。
+old_workspace/不可解的我的一切:
+  name: 不可解的我的一切
+  description: 这是一个关于跨性别主题的同人漫画系列，以幽默和真挚的方式描绘了主人公的身份探索与个人成长。漫画通过生动的情节与角色设置，反映出跨性别者在生活中的挑战与经历，激励更多人对多元性别的理解和接受。
+old_workspace/别当欧尼酱啦:
+  name: 别当欧尼酱啦
+  description: 本目录收录了漫画作品《别当欧尼酱啦》的多个章节及特别篇。这部漫画通过幽默和生动的情节，展现了跨性别者的生活和情感经历，体现了性别多样性与社会接纳的主题。
+webpage_archive/cleaned:
+  name: cleaned
+  description: 该目录收录了来自多个网站的中文跨性别相关的新闻报道和信息，包括新浪、搜狐、腾讯新闻等。这些资源涵盖了跨性别者的生命故事、医疗经验、法律政策、社会环境、以及相关统计数据和研究资料，旨在展示跨性别群体的真实生存状况和艺术创作。
 学术文献:
   name: 学术文献
   description: 此目录包含关于跨性别议题的学术文献，包括人文、医学、法律和社会科学领域的研究和资料，包括但不限于发表于学术期刊的论文和由大学附属出版社出版的学术书籍。采用近似于学术写作的风格创作、发布于某些期刊杂志，但不确定是否为「学术」文献的，放置于「杂志及新闻报道」分类。
