--- a/.github/md5.yml
+++ b/.github/md5.yml
@@ -346,6 +346,10 @@
   name: 9.png
   path: 文学作品和艺术创作/自传/一个阉人的真实故事/9.png
   md5: 18b3362b8f8f129268f8a1f1512e47d4
+AG手术后悔-网络害人.jpg:
+  name: AG手术后悔-网络害人.jpg
+  path: 文学作品和艺术创作/自传/AG手术后悔-网络害人.jpg
+  md5: 15199ebc5eed9283733bbbb26da4a47e
 Advocate__Aurora__Health_有关提供服务时严禁歧视的通知.pdf:
   name: Advocate__Aurora__Health_有关提供服务时严禁歧视的通知.pdf
   path: 政府及官方组织文件/美国/Advocate__Aurora__Health_有关提供服务时严禁歧视的通知.pdf
@@ -1102,6 +1106,10 @@ hormones_MTF.pdf:
   name: hormones_MTF.pdf
   path: 学术文献/医学/hormones_MTF.pdf
   md5: 9cb665114e4e6c58a09dacb7dd962d20
+mtf.wiki_上面的导语被移除了.jpg:
+  name: mtf.wiki_上面的导语被移除了.jpg
+  path: 社群及NGO文件/社群讨论/中国大陆/mtf.wiki_上面的导语被移除了.jpg
+  md5: 242d646123fc3ef7ebc3183b6dea6c4a
 oneamongus.pdf:
   name: oneamongus.pdf
   path: 社群及NGO文件/其他组织文件/oneamongus.pdf
@@ -1830,6 +1838,10 @@ q-a-for-parents-family-of-transgender-2011-simplified-chinese.pdf:
   name: 户籍管理领域基层政务公开标准目录.pdf
   path: 政府及官方组织文件/中国大陆/户籍管理领域基层政务公开标准目录.pdf
   md5: ea9b84b452f3320a701119ed085ded81
+手术恢复.jpg:
+  name: 手术恢复.jpg
+  path: 社群及NGO文件/社群讨论/中国大陆/手术恢复.jpg
+  md5: 41b20b8ea98b641c71755ad9817cc0bd
 拯救可橙：被父母强送矫治的跨性别者.pdf:
   name: 拯救可橙：被父母强送矫治的跨性别者.pdf
   path: 杂志及新闻报道/中国大陆/拯救可橙：被父母强送矫治的跨性别者.pdf
