--- a/.github/templates/README.md.template
+++ b/.github/templates/README.md.template
@@ -1,4 +1,4 @@
-# 跨性别中文数字档案馆
+# 跨性别中文数字图书馆
 
 在这个信息快速流动但又易逝的时代，我们希望成为泛中文社区跨性别历史的见证者与守护者。
 
@@ -9,8 +9,11 @@
 
 ## 网站
 
-- [主站点与文档存档库: digital.transchinese.org](https://digital.transchinese.org)
+- [主站点与精品文档存档库: digital.transchinese.org](https://digital.transchinese.org)
 - [新闻网页存档与资料库: news.transchinese.org](https://news.transchinese.org)
+- [性转相关漫画存档库: comic.transchinese.org](https://comic.transchinese.org)
+- [变身文学与小说存档库（剧情向，非限制级）: novel.transchinese.org](https://novel.transchinese.org)
+- [变身文学与小说存档库（限制级）: snovel.transchinese.org](https://snovel.transchinese.org)
 
 ## 目录
 
