--- a/文学作品和艺术创作/自传/config.yml
+++ b/文学作品和艺术创作/自传/config.yml
@@ -10,6 +10,13 @@ tags:
 - 过渡经历
 license: ''
 files:
+- name: AG手术后悔-网络害人
+  filename: AG手术后悔-网络害人.jpg
+  type: image
+  format: JPEG Image
+  size: 224817
+  md5: 15199ebc5eed9283733bbbb26da4a47e
+  page: AG手术后悔-网络害人.jpg
 - name: PDF_我的雙性人生_-_OII_Europe_歐洲雙性人自我敘說
   filename: PDF_我的雙性人生_-_OII_Europe_歐洲雙性人自我敘說.pdf
   type: document
