--- a/.github/prompts/gen_dir_meta.md.template
+++ b/.github/prompts/gen_dir_meta.md.template
@@ -19,4 +19,13 @@
   ```
   {directory_files}
   ```
-## 
+## Instructions
+
+请为上述目录生成以下元数据：
+
+- **描述**：提供目录内容的摘要和介绍，尽可能详细。
+- **标签**：列出描述目录内容或主题的相关标签或关键词。
+
+确保元数据准确。描述应为详细、信息丰富的几段话，尽可能详细、具体地讲解目录中的内容，
+适当摘抄文中出现的句子和内容。标签应相关且具体。所有的标签和描述信息均应为中文。如果
+你已知的信息不足以判断对应的标签和描述信息，请填写“未知”，或表明这是某个资料的一部分。
