--- a/.github/prompts/check_related.md.template
+++ b/.github/prompts/check_related.md.template
@@ -14,6 +14,9 @@
 如果相关，请给出 True，否则请给出 False。如果不确定，请给出 NotSure。我们会根据你的判断
 对网页进行访问和收录。
 
+性转是指描绘角色性别转换的小说作品。
+伪娘/男娘/伪街/易装/变装/女装大佬等亚文化词汇通常描绘生理性别为男性但以女性形象出现。
+
 ## Query Result
 
 - title: {title}
