--- a/.github/md5.yml
+++ b/.github/md5.yml
@@ -256,7 +256,7 @@
   md5: 02ba197a68a0cbe9b630584885414505
 2012年父母对跨性别青少年的支持影响报告.pdf:
   name: 2012年父母对跨性别青少年的支持影响报告.pdf
-  path: 学术文献/人文社科/2012年父母对跨性别青少年的支持影响报告.pdf
+  path: 社群及NGO文件/统计报告/2012年父母对跨性别青少年的支持影响报告.pdf
   md5: 6900ee21b1da317599e253fefe1243bb
 2013年上海骄傲节宣传稿.pdf:
   name: 2013年上海骄傲节宣传稿.pdf
@@ -390,10 +390,6 @@
   name: 2017年联合国人权理事会第三十六届会议增编报告.pdf
   path: 政府及官方组织文件/联合国/2017年联合国人权理事会第三十六届会议增编报告.pdf
   md5: 70ad09d843d4806e12ed37d4add63c6e
-2017年谭光辉小说人物分类法研究.pdf:
-  name: 2017年谭光辉小说人物分类法研究.pdf
-  path: 学术文献/人文社科/2017年谭光辉小说人物分类法研究.pdf
-  md5: 9ca9ff102624eff05b460c18b854473e
 2017王娟_多元性别身份的操演与戏仿.pdf:
   name: 2017王娟_多元性别身份的操演与戏仿.pdf
   path: 学术文献/人文社科/2017王娟_多元性别身份的操演与戏仿.pdf
@@ -416,7 +412,7 @@
   md5: 281047f6b1f353309b370e4ef4af2f18
 2018教育部人文社科项目拨款明细.pdf:
   name: 2018教育部人文社科项目拨款明细.pdf
-  path: 学术文献/人文社科/2018教育部人文社科项目拨款明细.pdf
+  path: 政府及官方组织文件/中国大陆/2018教育部人文社科项目拨款明细.pdf
   md5: 2d68da5d593b9814e0d09a3176944608
 2019_年社会概览_OECD经合组织社会指标.pdf:
   name: 2019_年社会概览_OECD经合组织社会指标.pdf
@@ -434,10 +430,6 @@
   name: 2019年9月24日_温哥华主校_放映电影《为什么我喜欢做酷儿仔》.pdf
   path: 文学作品和艺术创作/音频影像/2019年9月24日_温哥华主校_放映电影《为什么我喜欢做酷儿仔》.pdf
   md5: 51bb113e428b28c840e407803b55a494
-2019年易平_以人为中心的身份操演研究.pdf:
-  name: 2019年易平_以人为中心的身份操演研究.pdf
-  path: 学术文献/人文社科/2019年易平_以人为中心的身份操演研究.pdf
-  md5: 8ad5500bdfa4d08b71d41f2c9f1c1e44
 2020_年美国内分泌协会临床实践指南_内分泌疾病患者的血脂管理.pdf:
   name: 2020_年美国内分泌协会临床实践指南_内分泌疾病患者的血脂管理.pdf
   path: 学术文献/医学/2020_年美国内分泌协会临床实践指南_内分泌疾病患者的血脂管理.pdf
@@ -484,11 +476,11 @@
   md5: 18b67646c4aa65c7e7891719868b827b
 2021年拳头游戏多元与包容进展报告.pdf:
   name: 2021年拳头游戏多元与包容进展报告.pdf
-  path: 政府及官方组织文件/其他地区/2021年拳头游戏多元与包容进展报告.pdf
+  path: 社群及NGO文件/其他组织文件/2021年拳头游戏多元与包容进展报告.pdf
   md5: 46f1f1a1613ee32ce13776e8a9e71534
 2022-02-05_马骋Yura_酷儿女性看爱情与百合文化解构异性恋关系.pdf:
   name: 2022-02-05_马骋Yura_酷儿女性看爱情与百合文化解构异性恋关系.pdf
-  path: 文学作品和艺术创作/纪实作品/2022-02-05_马骋Yura_酷儿女性看爱情与百合文化解构异性恋关系.pdf
+  path: 学术文献/人文社科/2022-02-05_马骋Yura_酷儿女性看爱情与百合文化解构异性恋关系.pdf
   md5: 2ebe45d184bec02dd67ce52561a507f3
 2022_世界艾滋病大会强调科学创新与合作吉利德为终结HIV_全球.pdf:
   name: 2022_世界艾滋病大会强调科学创新与合作吉利德为终结HIV_全球.pdf
@@ -544,7 +536,7 @@
   md5: 158beb9bd37ec5ae275261caa4e9f953
 2023_行政院多元性别生活状况调查研究报告.pdf:
   name: 2023_行政院多元性别生活状况调查研究报告.pdf
-  path: 学术文献/法律/2023_行政院多元性别生活状况调查研究报告.pdf
+  path: 社群及NGO文件/统计报告/2023_行政院多元性别生活状况调查研究报告.pdf
   md5: 71fbf28943fcdc5eb4b1db3273960235
 2023_陪伴支持与多元文化社区服务报告.pdf:
   name: 2023_陪伴支持与多元文化社区服务报告.pdf
@@ -916,7 +908,7 @@ PDF_Cover_Page_校长致辞作为学校的家人保持联系_-_Mason_Families.pd
   md5: c2a69090565682804492ec11db83bbb8
 PDF_HRT_激素替代疗法HRT_NHS_SCOTLAND.pdf:
   name: PDF_HRT_激素替代疗法HRT_NHS_SCOTLAND.pdf
-  path: 学术文献/医学/PDF_HRT_激素替代疗法HRT_NHS_SCOTLAND.pdf
+  path: 社群及NGO文件/手册指南/PDF_HRT_激素替代疗法HRT_NHS_SCOTLAND.pdf
   md5: 4065ea07e34991b6606288716521fabc
 PDF_LGBTI_包容指数拟议指标.pdf:
   name: PDF_LGBTI_包容指数拟议指标.pdf
@@ -964,7 +956,7 @@ PDF_中国大陆对LGBTQ_群体的正面态度.pdf:
   md5: a39d4c4b234ef1f2353f03f118c4ebf2
 PDF_中国大陆跨性别群体激素干预获取情况调查报告.pdf:
   name: PDF_中国大陆跨性别群体激素干预获取情况调查报告.pdf
-  path: 学术文献/医学/PDF_中国大陆跨性别群体激素干预获取情况调查报告.pdf
+  path: 社群及NGO文件/统计报告/PDF_中国大陆跨性别群体激素干预获取情况调查报告.pdf
   md5: b30535dba955a4123c545864f3acdc35
 PDF_中国彩虹媒体奖2018-2019_年度彩虹媒体监测报告.pdf:
   name: PDF_中国彩虹媒体奖2018-2019_年度彩虹媒体监测报告.pdf
@@ -1654,10 +1646,6 @@ Transgender_Marriage_and_the_Legal_Obligation_to_Disclose_Gender_History.pdf:
   name: Transgender_Marriage_and_the_Legal_Obligation_to_Disclose_Gender_History.pdf
   path: 学术文献/人文社科/Transgender_Marriage_and_the_Legal_Obligation_to_Disclose_Gender_History.pdf
   md5: 5241fed151429572c95ca182ef1f7fa8
-Transgender_People_in_the_Military.pdf:
-  name: Transgender_People_in_the_Military.pdf
-  path: 学术文献/人文社科/Transgender_People_in_the_Military.pdf
-  md5: 1f0c8109580d832c408945ad720c6fce
 Transgender_Representation_by_the_People’s_Daily_Since_1949.pdf:
   name: Transgender_Representation_by_the_People’s_Daily_Since_1949.pdf
   path: 学术文献/人文社科/Transgender_Representation_by_the_People’s_Daily_Since_1949.pdf
@@ -1722,10 +1710,6 @@ shizu's_跨性别女性HRT资料兼指南__v1.0_.pdf:
   name: 《哥伦比亚特区人权法案》按执法领域划分的受保护特征.pdf
   path: 政府及官方组织文件/美国/《哥伦比亚特区人权法案》按执法领域划分的受保护特征.pdf
   md5: 5f8f30b16a9c0f765934c0d03f849beb
-《守望初心》余艳长篇报告文学.pdf:
-  name: 《守望初心》余艳长篇报告文学.pdf
-  path: 文学作品和艺术创作/纪实作品/《守望初心》余艳长篇报告文学.pdf
-  md5: b56fad3d3c178e957bacb18f3d819324
 《日惹原则》关于将国际人权法应用于性倾向和性别认同相关事务的.pdf:
   name: 《日惹原则》关于将国际人权法应用于性倾向和性别认同相关事务的.pdf
   path: 政府及官方组织文件/联合国/《日惹原则》关于将国际人权法应用于性倾向和性别认同相关事务的.pdf
@@ -2042,10 +2026,6 @@ shizu's_跨性别女性HRT资料兼指南__v1.0_.pdf:
   name: 住房歧视保护与LGBTQ+权益.pdf
   path: 政府及官方组织文件/美国/住房歧视保护与LGBTQ+权益.pdf
   md5: afba9039023e1681ab275adb74864ba4
-住房需求评估与援助指南.pdf:
-  name: 住房需求评估与援助指南.pdf
-  path: 社群及NGO文件/医院和医疗体系/住房需求评估与援助指南.pdf
-  md5: 2610c0c5cccc91056d11bdc0ca8f74a5
 住錯性別身體的靈魂-跨性別與人權保護.pdf:
   name: 住錯性別身體的靈魂-跨性別與人權保護.pdf
   path: 学术文献/人文社科/住錯性別身體的靈魂-跨性別與人權保護.pdf
@@ -2268,7 +2248,7 @@ shizu's_跨性别女性HRT资料兼指南__v1.0_.pdf:
   md5: 486808417a2edf2640e6e561c5050bc6
 北京病痛挑战公益基金会2020年度工作报告.pdf:
   name: 北京病痛挑战公益基金会2020年度工作报告.pdf
-  path: 政府及官方组织文件/中国大陆/北京病痛挑战公益基金会2020年度工作报告.pdf
+  path: 社群及NGO文件/其他组织文件/北京病痛挑战公益基金会2020年度工作报告.pdf
   md5: e53a4c42d7f74ccaa4da8d2e78235698
 北医三院“易性症”序列治疗就诊指南.pdf:
   name: 北医三院“易性症”序列治疗就诊指南.pdf
@@ -2392,7 +2372,7 @@ shizu's_跨性别女性HRT资料兼指南__v1.0_.pdf:
   md5: 0af4e8740e57eabd64fd3a1e398ecb03
 变性手术患者的心理护理.pdf:
   name: 变性手术患者的心理护理.pdf
-  path: 学术文献/人文社科/变性手术患者的心理护理.pdf
+  path: 学术文献/医学/变性手术患者的心理护理.pdf
   md5: f6b09478cb9fecdcac349aab2472847b
 变性手术技术管理规范征求意见稿_便函_2009.pdf:
   name: 变性手术技术管理规范征求意见稿_便函_2009.pdf
@@ -2704,7 +2684,7 @@ shizu's_跨性别女性HRT资料兼指南__v1.0_.pdf:
   md5: 5ca16d15dd47b2d4d099edac590e6bf2
 对歧视骚扰零容忍政策报告.pdf:
   name: 对歧视骚扰零容忍政策报告.pdf
-  path: 政府及官方组织文件/中国大陆/对歧视骚扰零容忍政策报告.pdf
+  path: 社群及NGO文件/其他组织文件/对歧视骚扰零容忍政策报告.pdf
   md5: 83c96a3b6987780b70f3882f01e013a8
 小号中的叙事认同与爵士乐身份.pdf:
   name: 小号中的叙事认同与爵士乐身份.pdf
@@ -3506,10 +3486,6 @@ shizu's_跨性别女性HRT资料兼指南__v1.0_.pdf:
   name: 经济及社会理事会.pdf
   path: 政府及官方组织文件/联合国/经济及社会理事会.pdf
   md5: 2c50743a4066e7b54867a42fd96a6ec0
-统计结果调查报告.json:
-  name: 统计结果调查报告.json
-  path: 社群及NGO文件/统计报告/统计结果调查报告.json
-  md5: de528d29d69d1856c28cb9fb3a18be6c
 维多利亚州变更或压制实践禁止法2021年度解读.pdf:
   name: 维多利亚州变更或压制实践禁止法2021年度解读.pdf
   path: 政府及官方组织文件/其他地区/维多利亚州变更或压制实践禁止法2021年度解读.pdf
@@ -3824,7 +3800,7 @@ shizu's_跨性别女性HRT资料兼指南__v1.0_.pdf:
   md5: ea699563e802afd0bb743f1c91e36bd5
 评估职场中LGBTQI_的包容性.pdf:
   name: 评估职场中LGBTQI_的包容性.pdf
-  path: 学术文献/法律/评估职场中LGBTQI_的包容性.pdf
+  path: 社群及NGO文件/手册指南/评估职场中LGBTQI_的包容性.pdf
   md5: 57dee6b6b20296545004ebf9eb4e0407
 话语竞争与性别平等理念的传播.pdf:
   name: 话语竞争与性别平等理念的传播.pdf
@@ -4268,7 +4244,7 @@ shizu's_跨性别女性HRT资料兼指南__v1.0_.pdf:
   md5: fc2b24111d69c6aeafca6ab498aea09e
 骄傲与偏见-变革的动力-经济学人智库报告-2018.pdf:
   name: 骄傲与偏见-变革的动力-经济学人智库报告-2018.pdf
-  path: 学术文献/人文社科/骄傲与偏见-变革的动力-经济学人智库报告-2018.pdf
+  path: 社群及NGO文件/统计报告/骄傲与偏见-变革的动力-经济学人智库报告-2018.pdf
   md5: 875ca66c0c47f377ee40b776c8ef15c2
 高雄市性別友善觀光報告_2023.pdf:
   name: 高雄市性別友善觀光報告_2023.pdf
