--- a/社群及NGO文件/其他组织文件/config.yml
+++ b/社群及NGO文件/其他组织文件/config.yml
@@ -18,6 +18,13 @@ files:
   size: 2592687
   md5: 18b67646c4aa65c7e7891719868b827b
   page: 2021年度多元与包容报告_拳头公司_page.md
+- name: 2021年拳头游戏多元与包容进展报告
+  filename: 2021年拳头游戏多元与包容进展报告.pdf
+  type: document
+  format: PDF Document
+  size: 4336460
+  md5: 46f1f1a1613ee32ce13776e8a9e71534
+  page: 2021年拳头游戏多元与包容进展报告_page.md
 - name: 2023_陪伴支持与多元文化社区服务报告
   filename: 2023_陪伴支持与多元文化社区服务报告.pdf
   type: document
@@ -130,6 +137,13 @@ files:
   size: 311496
   md5: 0ba65b9d7a6e24147eb7e5a5a3ec3e06
   page: 全国心理援助热线机构联系信息心理服务与援助机构_page.md
+- name: 北京病痛挑战公益基金会2020年度工作报告
+  filename: 北京病痛挑战公益基金会2020年度工作报告.pdf
+  type: document
+  format: PDF Document
+  size: 1320173
+  md5: e53a4c42d7f74ccaa4da8d2e78235698
+  page: 北京病痛挑战公益基金会2020年度工作报告_page.md
 - name: 团体咨询服务会面记录_多元性别支持_2023
   filename: 团体咨询服务会面记录_多元性别支持_2023.pdf
   type: document
@@ -144,6 +158,13 @@ files:
   size: 381122
   md5: 097c484a15b0423e75d3e29aec5e1ae3
   page: 寒涟漪庇护所介绍第一版_page.md
+- name: 对歧视骚扰零容忍政策报告
+  filename: 对歧视骚扰零容忍政策报告.pdf
+  type: document
+  format: PDF Document
+  size: 285216
+  md5: 83c96a3b6987780b70f3882f01e013a8
+  page: 对歧视骚扰零容忍政策报告_page.md
 - name: 我骄傲我奉献真色彩_麦肯锡
   filename: 我骄傲我奉献真色彩_麦肯锡.pdf
   type: document
