--- a/.github/md5.yml
+++ b/.github/md5.yml
@@ -1,6 +1,6 @@
 -最新的HIV_临床研发数据驱动新一轮针对治疗预防和治愈的创新.pdf:
   name: -最新的HIV_临床研发数据驱动新一轮针对治疗预防和治愈的创新.pdf
-  path: 学术文献/医学/-最新的HIV_临床研发数据驱动新一轮针对治疗预防和治愈的创新.pdf
+  path: 社群及NGO文件/其他组织文件/-最新的HIV_临床研发数据驱动新一轮针对治疗预防和治愈的创新.pdf
   md5: 7d11ca4fda939cbef3a0730d02901932
 02第2课___不要“白洗”，只要“洗白白”.pdf:
   name: 02第2课___不要“白洗”，只要“洗白白”.pdf
