--- a/社群及NGO文件/其他组织文件/config.yml
+++ b/社群及NGO文件/其他组织文件/config.yml
@@ -11,6 +11,13 @@ tags:
 - NGO
 license: ''
 files:
+- name: -最新的HIV_临床研发数据驱动新一轮针对治疗预防和治愈的创新
+  filename: -最新的HIV_临床研发数据驱动新一轮针对治疗预防和治愈的创新.pdf
+  type: document
+  format: PDF Document
+  size: 5795740
+  md5: 7d11ca4fda939cbef3a0730d02901932
+  page: -最新的HIV_临床研发数据驱动新一轮针对治疗预防和治愈的创新_page.md
 - name: 2021年度多元与包容报告_拳头公司
   filename: 2021年度多元与包容报告_拳头公司.pdf
   type: document
