--- a/search_index.yml
+++ b/search_index.yml
@@ -7742,6 +7742,26 @@
   - 跨性别权益
   - 法律保护
   - 心理准备
+社群及NGO文件/其他组织文件/-最新的HIV_临床研发数据驱动新一轮针对治疗预防和治愈的创新_page.md:
+  type: document
+  format: PDF Document
+  size: 5795740
+  md5: 7d11ca4fda939cbef3a0730d02901932
+  link: https://gileadchina.cn/-/media/gilead-china/pdfs/news-and-press/press-releases/20200722-cn-adis-2022.pdf
+  description: 该文件为关于2022世界艾滋病大会的资料，主要讨论了吉利德科学在HIV治疗、预防和治愈方面的最新研究与成果。文件中详细介绍了吉利德在大会上所参与的各项活动，包括其关键研究项目和合作，助力终结全球HIV流行的长期承诺。文件提到，吉利德科学希望通过以人为本的医疗创新，针对HIV受影响个体和社区不断变化的需求，进行深入研究与合作。文件还列举了多个研究项目的最新数据，探讨了HIV治疗和预防的科学进展，强调了医疗不均衡对健康影响的复杂性。此外，该文件还包括HIV临床研发的新疗法、治疗效果和相关数据分析，展示了在推动健康平等方面的努力。
+  archived date: '2024-10-29'
+  author: 吉利德科学
+  date: '2022-07-21'
+  region: 美国
+  tags:
+  - HIV
+  - 艾滋病大会
+  - 医疗资源
+  - 科学创新
+  - 治疗预防
+  - 跨性别健康
+  - 全球卫生
+  - 吉利德科学
 社群及NGO文件/其他组织文件/2021年度多元与包容报告_拳头公司_page.md:
   type: document
   format: PDF Document
@@ -20801,26 +20821,6 @@
   - 多元性别
   - 文化研究
   - 性解放运动
-学术文献/医学/-最新的HIV_临床研发数据驱动新一轮针对治疗预防和治愈的创新_page.md:
-  type: document
-  format: PDF Document
-  size: 5795740
-  md5: 7d11ca4fda939cbef3a0730d02901932
-  link: https://gileadchina.cn/-/media/gilead-china/pdfs/news-and-press/press-releases/20200722-cn-adis-2022.pdf
-  description: 该文件为关于2022世界艾滋病大会的资料，主要讨论了吉利德科学在HIV治疗、预防和治愈方面的最新研究与成果。文件中详细介绍了吉利德在大会上所参与的各项活动，包括其关键研究项目和合作，助力终结全球HIV流行的长期承诺。文件提到，吉利德科学希望通过以人为本的医疗创新，针对HIV受影响个体和社区不断变化的需求，进行深入研究与合作。文件还列举了多个研究项目的最新数据，探讨了HIV治疗和预防的科学进展，强调了医疗不均衡对健康影响的复杂性。此外，该文件还包括HIV临床研发的新疗法、治疗效果和相关数据分析，展示了在推动健康平等方面的努力。
-  archived date: '2024-10-29'
-  author: 吉利德科学
-  date: '2022-07-21'
-  region: 美国
-  tags:
-  - HIV
-  - 艾滋病大会
-  - 医疗资源
-  - 科学创新
-  - 治疗预防
-  - 跨性别健康
-  - 全球卫生
-  - 吉利德科学
 学术文献/医学/2007年变性人及手术态度研究_冯泽永_page.md:
   type: document
   format: PDF Document
