--- a/.github/md5.yml
+++ b/.github/md5.yml
@@ -2450,10 +2450,10 @@ shizu's_跨性别女性HRT资料兼指南__v1.0_.pdf:
   name: 商業道德政策_對歧視騷擾零容忍.pdf
   path: 政府及官方组织文件/其他地区/商業道德政策_對歧視騷擾零容忍.pdf
   md5: 997105fcdb6d5b4aedd7b066c8993468
-嗓音训练指南正式归档.pdf:
-  name: 嗓音训练指南正式归档.pdf
-  path: 社群及NGO文件/手册指南/嗓音训练指南正式归档.pdf
-  md5: f3b144993f13f8df91029fdda9d7feec
+嗓音训练指南.pdf:
+  name: 嗓音训练指南.pdf
+  path: 社群及NGO文件/手册指南/嗓音训练指南.pdf
+  md5: 81051bcc2cf1bedf378224b0a93e2877
 器官鹤植硇人身权问题研夯.pdf:
   name: 器官鹤植硇人身权问题研夯.pdf
   path: 学术文献/法律/器官鹤植硇人身权问题研夯.pdf
