fix archive date

--- a/.github/md5.yml
+++ b/.github/md5.yml
@@ -2450,6 +2450,10 @@ shizu's_跨性别女性HRT资料兼指南__v1.0_.pdf:
   name: 商業道德政策_對歧視騷擾零容忍.pdf
   path: 政府及官方组织文件/其他地区/商業道德政策_對歧視騷擾零容忍.pdf
   md5: 997105fcdb6d5b4aedd7b066c8993468
+嗓音功能训练略解-深圳大学总医院耳鼻咽喉头颈外科.pdf:
+  name: 嗓音功能训练略解-深圳大学总医院耳鼻咽喉头颈外科.pdf
+  path: 社群及NGO文件/生活与性体验/伪声/嗓音功能训练略解-深圳大学总医院耳鼻咽喉头颈外科.pdf
+  md5: '59390865028313220290591542882657'
 嗓音训练指南.pdf:
   name: 嗓音训练指南.pdf
   path: 社群及NGO文件/手册指南/嗓音训练指南.pdf
