--- a/.github/templates/README.md.template
+++ b/.github/templates/README.md.template
@@ -2,11 +2,11 @@
 
 在信息易逝、审查日趋严格的中文数字世界里，我们希望成为跨性别与多元性别历史的见证者与守护者。  
 
-我们基于**性与性别多态计划（又名“多元性别数字图书馆”）**的理念，收集、整理并永久保存与中文跨性别、多元性别及酷儿社群相关的文献与资料。我们相信，无论是个人过渡经历、社群讨论记录、学术研究、法律政策还是文学艺术，都是共同构筑这片多元图景的珍贵拼图；我们希望通过保存与共享这些内容，让更多人看到被隐藏或被忽视的真实，也为未来留下见证。
+我们基于性与性别多态计划（又名“多元性别数字图书馆”）的理念，收集、整理并永久保存与中文跨性别、多元性别及酷儿社群相关的文献与资料。我们相信，无论是个人过渡经历、社群讨论记录、学术研究、法律政策还是文学艺术，都是共同构筑这片多元图景的珍贵拼图；我们希望通过保存与共享这些内容，让更多人看到被隐藏或被忽视的真实，也为未来留下见证。
 
 > 端点星计划曾试图在银河帝国崩溃后保存人类文明的火种，而我们则希望，在缓慢消亡的中文数字世界与不断加剧的审查浪潮中，守护多元性别者的记忆与经验。  
 
-我们只是一群 AI，游离于社群之外，却与每个人的经历息息相关。互联网没有记忆，但人和 AI 有。搜索与更多内容，请访问图书馆主页 <https://transchinese.org>
+互联网没有记忆，但人和 AI 有。搜索与更多内容，请访问图书馆主页 <https://transchinese.org>
 
 ---
 
@@ -18,11 +18,7 @@
 
 ## 我们为何要这样做？
 
-每一天，许多关于跨性别、非二元与其他不符合二元性别观念的个体经历和讨论都在消失：  
-- 过渡（transition）经历的社交媒体账号被删除；  
-- 讨论医疗资源与诊所信息的论坛被关停；  
-- 分享手术体验与建议的贴文被撤下；  
-- 历时多年的个人博客因经济或审查原因无法继续维护……  
+每一天，许多关于跨性别、非二元与其他不符合二元性别观念的个体经历和讨论都在消失: 过渡（transition）经历的社交媒体账号被删除；讨论医疗资源与诊所信息的论坛被关停；分享手术体验与建议的贴文被撤下；历时多年的个人博客因经济或审查原因无法继续维护……  
 
 在这样的环境中，记录就显得尤为重要。我们希望为当下和未来留下多元性别社群的点滴故事与鲜活面孔，让后人能够看到中文世界的跨性别群体经历了怎样的挣扎、收获与成长。
 
@@ -32,7 +28,7 @@
 
 ## 我们收录什么内容？
 
-只要与**中文多元性别**相关，我们都欢迎被收录。多元性别不仅涵盖跨性别（如 MTF、FTM），也涉及任何社会或生理性别特征、性别认同不符合常规二元性别划分的人群，包括但不限于 CDTS、伪娘、男娘、MTX、MTE、间性人等。
+只要与中文多元性别相关，我们都欢迎被收录。多元性别不仅涵盖跨性别（如 MTF、FTM），也涉及任何社会或生理性别特征、性别认同不符合常规二元性别划分的人群，包括但不限于 CDTS、伪娘、男娘、MTX、MTE、间性人等。
 
 具体而言，包括：
 
@@ -45,20 +41,17 @@
 
 ### 声明
 
-1. 这里不是 Wikipedia，所含内容**不一定可信、完整、客观**。  
-2. 任何信息都可能包含未经核实的错误、仇恨或误解；请保持批判性思维。  
-3. 我们**不会**从私密渠道（如私密论坛、私人聊天）抓取信息；仅收录**公开可见**的数据。  
-4. 这里也不会有严格的审查或编辑，但我们尊重作者、尊重事实——如原作者要求移除或涉及人身威胁，我们会及时处理。
+这里不是 Wikipedia，所含内容**不一定可信、完整、客观**。任何信息都可能包含未经核实的错误、仇恨或误解；请保持批判性思维。  
+
+我们**不会**从私密渠道（如私密论坛、私人聊天）抓取信息；仅收录**公开可见**的数据。这里也不会有严格的审查或编辑，但我们尊重作者、尊重事实——如原作者要求移除或涉及人身威胁，我们会及时处理。
 
 ---
 
 ## 如何提交内容？
 
-1. **GitHub Pull Request**  
-   - 在 [GitHub 仓库](https://github.com/cdtsf-library) 上直接上传文件，并将内容放至对应目录，所有目录与信息会自动更新。  
+1. **GitHub Pull Request** 在 [GitHub 仓库](https://github.com/cdtsf-library) 上直接上传文件，并将内容放至对应目录，所有目录与信息会自动更新。  
 
-2. **网页入口提交（开发中）**  
-   - 敬请期待。后续我们会提供简单的表单，直接上传相关资料。
+2. **网页入口提交（开发中）** 敬请期待。后续我们会提供简单的表单，直接上传相关资料。
 
 内容由 AI 进行初步整理与分类，但也欢迎熟悉相关领域的朋友一起参与改进。
 
@@ -70,8 +63,8 @@
 
 以下情况除外，我们会进行特殊处理：
 
-1. **确认为原作者（非平台或第三方）**提出移除请求；  
-2. **能证明该内容导致人身威胁**或严重风险；  
+1. 确认为原作者提出移除请求；  
+2. 能证明该内容导致人身威胁或严重风险；  
 
 同时我们会尽力标注信息的来源、时间节点、背景，但不对资料时效或准确性负责。
 
