--- a/.github/templates/page.md.template
+++ b/.github/templates/page.md.template
@@ -27,4 +27,4 @@ Download: [{filename}]({filename})
 | Date            | {date}                                 |
 | Tags            | {tags}                                 |
 
-本文由跨性别中文数字档案馆归档整理，仅供存档使用。版权归原作者所有。
+本文由跨性别中文数字档案馆归档整理，仅供存档使用。版权归原作者所有，所有内容仅为历史资料保存及研究之用。如果原作者或相关方希望移除存档内容，请通过电子邮件与我们联系。
