Update config.yml to fix name

--- a/社群及NGO文件/手册指南/config.yml
+++ b/社群及NGO文件/手册指南/config.yml
@@ -1,5 +1,5 @@
-name: 资料指南
-description: 该目录包含跨性别相关的非政府组织（NGO）资料指南，旨在为社区成员提供资源和支持，帮助他们了解可用的服务与信息。
+name: 跨性别相关手册指南
+description: 该目录包含跨性别相关的非政府组织（NGO）手册指南，旨在为社区成员提供资源和支持，帮助他们了解可用的服务与信息。
 curator: ''
 source: ''
 tags:
